# fastapi-kafka-websockets

./: README.md  main.py  pyproject.toml
app/: config.py  main.py
templates/: index.html
