[project]
name = "fastapi-kafka-websockets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.12.0",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.9.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = ["ruff>=0.11.6"]
