[project]
name = "fastapi-kafka-websockets"
version = "0.1.0"
authors = [
    { name = "Angelos Panagiotopoulos", email = "angelospanag@protonmail.com" }
]
description = "Experimenting with a full flow of sending messages from an Apache Kafka consumer, to a FastAPI websockets endpoint, to a UI using a JavaScript websockets connection."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.12.0",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.9.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = ["ruff>=0.11.6"]
